--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,7 @@
         "APP_ENV": "production",
         "APP_DEBUG": "true",
         "APP_URL": "https://yourproductionurl.com",
+        "APP_KEY": "base64:1yrm6itMtcCqZkSXNm4R9h6+ku/RQjtztdBgzrSAyHA=",
  
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
